# aisc-shapes-rs

./: .gitignore  Cargo.toml  README.md
data/: aisc-shapes-database-v15.0.xlsx  export.py  python_reqs.txt  usage.txt
src/: aisc-shapes-db-english.csv  aisc-shapes-db-metric.csv  aisc-shapes-db.csv  columns.rs  lib.rs  shape.rs
src/design/: shape.rs
