[package]
name = "aisc-shapes-rs"
authors = ["Patrick Miller"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
design = []
edi = []
